@startuml
skinparam nodesep 10
hide circle
hide empty members
class "Postboksadresse" [[{Ei postboksadresse.}]] {
    {field} postboksnummer : Postboksnummer  
    {field} anleggsnavn : string  
    {field} id(i) : uriorcurie  
    {field} br_adresse_id(i) : string  
    {field} co_navn(i) : string  
    {field} type(i) : string  
}
class "Poststed" [[{Eit poststed knytt til eit postnummer.}]] {
    {field} id : uriorcurie  
    {field} navn : string  
    {field} postnummer : Postnummer  
}
class "Stedsadresse" [[{Ei stadfesta adresse utan vegadresse (t.d. i utmark).}]] {
    {field} stedsnavn : string  
    {field} id(i) : uriorcurie  
    {field} br_adresse_id(i) : string  
    {field} co_navn(i) : string  
    {field} type(i) : string  
}
class "Vegadresse" [[{Ei vegadresse (adressenavn + adressenummer).}]] {
    {field} vegadresse_id : string  
    {field} bruksenhetsnummer : Bruksenhetsnummer  
    {field} adressenavn : string  
    {field} kort_adressenavn : string  
    {field} adressetilleggsnavn : string  
    {field} id(i) : uriorcurie  
    {field} br_adresse_id(i) : string  
    {field} co_navn(i) : string  
    {field} type(i) : string  
}
"Postboksadresse" --> "0..1" "Poststed" : "poststed"
"Stedsadresse" --> "0..1" "Poststed" : "poststed"
"Vegadresse" --> "0..1" "Poststed" : "poststed"
class "Fylke" [[{Eit norsk fylke.}]] {
    {field} id : uriorcurie  
    {field} fylkesnummer : Fylkesnummer  
    {field} fylkesnavn : string  
}
class "Kommune" [[{Ein norsk kommune.}]] {
    {field} id : uriorcurie  
    {field} kommunenummer : Kommunenummer  
    {field} kommunenavn : string  
}
class "Adressenummer" [[{Adressenummeret (husnummer og eventuell husbokstav) i ei vegadresse.}]] {
    {field} id : uriorcurie  
    {field} nummer : Husnummer  
    {field} bokstav : Husbokstav  
}
class "GeografiskAdresse" [[{Ei geografisk adresse. Abstrakt basisklasse for dei konkrete adressetypane under.}]] {
    {field} id : uriorcurie  
    {field} br_adresse_id : string  
    {field} co_navn : string  
    {field} type : string  
}
"Vegadresse" --> "0..1" "Fylke" : "fylke"
"Vegadresse" --> "0..1" "Kommune" : "kommune"
"Vegadresse" --> "0..1" "Adressenummer" : "adressenummer"
"GeografiskAdresse" ^-- "Vegadresse"
"Stedsadresse" --> "0..1" "Kommune" : "kommune"
"GeografiskAdresse" ^-- "Stedsadresse"
"Postboksadresse" --> "0..1" "Kommune" : "kommune"
"GeografiskAdresse" ^-- "Postboksadresse"
class "Matrikkeladresse" [[{Ei matrikkeladresse (knytt til eit matrikkelnummer).}]] {
    {field} matrikkeladresse_id : string  
    {field} bruksenhetsnummer : Bruksenhetsnummer  
    {field} adressetilleggsnavn : string  
    {field} undernummer : integer  
    {field} id(i) : uriorcurie  
    {field} br_adresse_id(i) : string  
    {field} co_navn(i) : string  
    {field} type(i) : string  
}
class "Matrikkelnummer" [[{Eit matrikkelnummer (gårds-, bruks-, feste- og seksjonsnummer).}]] {
    {field} id : uriorcurie  
    {field} kommunenummer : Kommunenummer  
    {field} gaardsnummer : integer  
    {field} bruksnummer : integer  
    {field} festenummer : integer  
    {field} seksjonsnummer : integer  
}
"Matrikkeladresse" --> "0..1" "Matrikkelnummer" : "matrikkelnummer"
"GeografiskAdresse" ^-- "Matrikkeladresse"
class "InternasjonalAdresse" [[{Ei adresse i eit anna land enn Noreg, i fri form.}]] {
    {field} adressenavn : string  
    {field} adressenummer_tekst : string  
    {field} bygning : string  
    {field} etasjenummer : string  
    {field} boenhet : string  
    {field} postboks : string  
    {field} postkode : string  
    {field} by_eller_stedsnavn : string  
    {field} region : string  
    {field} distrikt_eller_bydel : string  
    {field} landkode : Landkode  
    {field} fri_adressetekst : string  
    {field} adresseidentifikator : string  
    {field} id(i) : uriorcurie  
    {field} br_adresse_id(i) : string  
    {field} co_navn(i) : string  
    {field} type(i) : string  
}
"GeografiskAdresse" ^-- "InternasjonalAdresse"
class "DigitalAdresse" [[{Ei digital adresse. Abstrakt basisklasse for dei konkrete digitale adressetypane under.}]] {
    {field} id : uriorcurie  
    {field} identifikator : string  
    {field} type : string  
}
class "Telefonnummer" [[{Eit fasttelefonnummer.}]] {
    {field} prefiks_med_nasjonal_kode : PrefiksMedNasjonalKode  
    {field} nasjonalt_nummer : NasjonaltNummer  
    {field} id(i) : uriorcurie  
    {field} identifikator(i) : string  
    {field} type(i) : string  
}
class "Nettadresse" [[{Ei nettadresse (protokoll, domenenavn og filsti).}]] {
    {field} protokoll : string  
    {field} domenenavn : string  
    {field} filsti : string  
    {field} id(i) : uriorcurie  
    {field} identifikator(i) : string  
    {field} type(i) : string  
}
class "Mobiltelefonnummer" [[{Eit mobiltelefonnummer.}]] {
    {field} prefiks_med_nasjonal_kode : PrefiksMedNasjonalKode  
    {field} nasjonalt_nummer : NasjonaltNummer  
    {field} id(i) : uriorcurie  
    {field} identifikator(i) : string  
    {field} type(i) : string  
}
class "Meldingsboks" [[{Ei digital meldingsboks (t.d. Altinn).}]] {
    {field} meldingsbokstype : string  
    {field} id(i) : uriorcurie  
    {field} identifikator(i) : string  
    {field} type(i) : string  
}
class "IPAdresse" [[{Ei IP-adresse.}]] {
    {field} ip_nummer : string  
    {field} id(i) : uriorcurie  
    {field} identifikator(i) : string  
    {field} type(i) : string  
}
class "EPostadresse" [[{Ei e-postadresse, delt opp i brukarnamn og domenenavn.}]] {
    {field} domenenavn : string  
    {field} brukernavn : string  
    {field} id(i) : uriorcurie  
    {field} identifikator(i) : string  
    {field} type(i) : string  
}
"DigitalAdresse" ^-- "Telefonnummer"
"DigitalAdresse" ^-- "Nettadresse"
"DigitalAdresse" ^-- "Mobiltelefonnummer"
"DigitalAdresse" ^-- "Meldingsboks"
"DigitalAdresse" ^-- "IPAdresse"
"DigitalAdresse" ^-- "EPostadresse"
@enduml
